# serializer version: 1
# name: test_fan_device_state[tests/HOMES/fan-off.yaml]
  tuple(
    'off',
    ReadOnlyDict({
      'friendly_name': 'Counter Fan',
      'oscillating': False,
      'percentage': 0,
      'percentage_step': 1.0,
      'preset_mode': None,
      'preset_modes': None,
      'supported_features': <FanEntityFeature.SET_SPEED|OSCILLATE: 3>,
    }),
  )
# ---
# name: test_fan_device_state[tests/HOMES/fan-on.yaml]
  tuple(
    'on',
    ReadOnlyDict({
      'friendly_name': 'Counter Fan',
      'oscillating': False,
      'percentage': 100,
      'percentage_step': 1.0,
      'preset_mode': None,
      'preset_modes': None,
      'supported_features': <FanEntityFeature.SET_SPEED|OSCILLATE: 3>,
    }),
  )
# ---
# name: test_fan_device_state[tests/HOMES/fan-oscillating.yaml]
  tuple(
    'on',
    ReadOnlyDict({
      'friendly_name': 'Counter Fan',
      'oscillating': True,
      'percentage': 100,
      'percentage_step': 1.0,
      'preset_mode': None,
      'preset_modes': None,
      'supported_features': <FanEntityFeature.SET_SPEED|OSCILLATE: 3>,
    }),
  )
# ---
